<resources>
    <string name="app_name">FosApp</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dashboard" />
    <string name="title_home" />
    <string name="title_notifications" />
    <string name="geef_je_totem_naam_string_app_name">Geef je (totem)naam</string>
    <string name="kies_jouw_tak">Kies jouw tak</string>
    <string name="bevers">Bevers</string>
    <string name="welpen">Welpen</string>
    <string name="wolven">Wolven</string>
    <string name="jv_jg">JV/JG</string>
    <string name="v_g">V/G</string>
    <string name="seniors">Seniors</string>
    <string name="aanwezigheden">Aanwezigheden</string>
    <string name="naam">naam</string>
    <string name="volgende">Volgende</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="popupDial">Op deze app krijg je de mogelijkheid om de aanwezigheden van je tak op te slaan, je programma en activiteit te bekijken en wijzigen en aankondigingen te plaatsen die iedereen kan zien</string>
</resources>
